Prepare for npm publishing
- Add .npmignore to exclude source files from package
- Add 'files' field to package.json
- Package size: 15.8 kB (only dist/, README, LICENSE)

--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "description": "Browser automation for Google Gemini image generation",
   "main": "dist/lib.js",
   "types": "dist/lib.d.ts",
+  "files": [
+    "dist/",
+    "README.md",
+    "LICENSE"
+  ],
   "exports": {
     ".": {
       "types": "./dist/lib.d.ts",
